// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/BarChartCard Grouped bar - Horizontal 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="iot--card iot--bar-chart-card iot--card--wrapper"
        data-testid="Card"
        id="grouped-horizontal-sample"
        role="presentation"
        style={
          Object {
            "--card-default-height": "304px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Particles and temperature in cities"
          >
            <div
              className="iot--card--title--text"
            >
              Particles and temperature in cities
            </div>
          </span>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "256px",
            }
          }
        >
          <div
            className="iot--bar-chart-container"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/BarChartCard Grouped bar - Vertical 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="iot--card iot--bar-chart-card iot--card--wrapper"
        data-testid="Card"
        id="grouped-sample"
        role="presentation"
        style={
          Object {
            "--card-default-height": "304px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Particles and temperature in cities"
          >
            <div
              className="iot--card--title--text"
            >
              Particles and temperature in cities
            </div>
          </span>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "256px",
            }
          }
        >
          <div
            className="iot--bar-chart-container"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/BarChartCard No data 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="iot--card iot--bar-chart-card iot--card--wrapper"
        data-testid="Card"
        id="simple-sample-no-data"
        role="presentation"
        style={
          Object {
            "--card-default-height": "304px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Particles and temperature in cities"
          >
            <div
              className="iot--card--title--text"
            >
              Particles and temperature in cities
            </div>
          </span>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "256px",
            }
          }
        >
          <div
            className="iot--card--empty-message-wrapper"
            style={
              Object {
                "--card-content-padding": "16px",
              }
            }
          >
            No data for this card.
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/BarChartCard Simple bar - Horizontal 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="iot--card iot--bar-chart-card iot--card--wrapper"
        data-testid="Card"
        id="simple-horizontal-sample"
        role="presentation"
        style={
          Object {
            "--card-default-height": "304px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Particles by city"
          >
            <div
              className="iot--card--title--text"
            >
              Particles by city
            </div>
          </span>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "256px",
            }
          }
        >
          <div
            className="iot--bar-chart-container"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/BarChartCard Simple bar - Time series 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="iot--card iot--bar-chart-card iot--card--wrapper"
        data-testid="Card"
        id="simple-time-sample"
        role="presentation"
        style={
          Object {
            "--card-default-height": "304px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Particles over 4 days"
          >
            <div
              className="iot--card--title--text"
            >
              Particles over 4 days
            </div>
          </span>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "256px",
            }
          }
        >
          <div
            className="iot--bar-chart-container"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/BarChartCard Simple bar - Vertical 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="iot--card iot--bar-chart-card iot--card--wrapper"
        data-testid="Card"
        id="simple-sample"
        role="presentation"
        style={
          Object {
            "--card-default-height": "304px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Particles by city"
          >
            <div
              className="iot--card--title--text"
            >
              Particles by city
            </div>
          </span>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "256px",
            }
          }
        >
          <div
            className="iot--bar-chart-container"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/BarChartCard Stacked bar - Horizontal 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="iot--card iot--bar-chart-card iot--card--wrapper"
        data-testid="Card"
        id="stacked-horizontal-sample"
        role="presentation"
        style={
          Object {
            "--card-default-height": "304px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Particles and temperature in cities"
          >
            <div
              className="iot--card--title--text"
            >
              Particles and temperature in cities
            </div>
          </span>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "256px",
            }
          }
        >
          <div
            className="iot--bar-chart-container"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/BarChartCard Stacked bar - Time series 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="iot--card iot--bar-chart-card iot--card--wrapper"
        data-testid="Card"
        id="stacked-horizontal-sample"
        role="presentation"
        style={
          Object {
            "--card-default-height": "304px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Particles / emissions over 4 days"
          >
            <div
              className="iot--card--title--text"
            >
              Particles / emissions over 4 days
            </div>
          </span>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "256px",
            }
          }
        >
          <div
            className="iot--bar-chart-container"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/BarChartCard Stacked bar - Time series with categories 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="iot--card iot--bar-chart-card iot--card--wrapper"
        data-testid="Card"
        id="stacked-horizontal-sample"
        role="presentation"
        style={
          Object {
            "--card-default-height": "304px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Particles by city over time"
          >
            <div
              className="iot--card--title--text"
            >
              Particles by city over time
            </div>
          </span>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "256px",
            }
          }
        >
          <div
            className="iot--bar-chart-container"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/BarChartCard Stacked bar - Vertical 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "520px",
        }
      }
    >
      <div
        className="iot--card iot--bar-chart-card iot--card--wrapper"
        data-testid="Card"
        id="stacked-sample"
        role="presentation"
        style={
          Object {
            "--card-default-height": "304px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Particles and temperature in cities"
          >
            <div
              className="iot--card--title--text"
            >
              Particles and temperature in cities
            </div>
          </span>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "256px",
            }
          }
        >
          <div
            className="iot--bar-chart-container"
          >
            <div
              className="chart-holder"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
